# qev-workspace

./: .gitignore  CONSENT_MODEL.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  generated.py  generated_1.css  generated_1.ts  generated_2.js  generated_2.ts  generated_3.sh  generated_3.ts  package.json  pnpm-lock.yaml  render.yaml
.github/workflows/: host-desktop-release.yml  pages.yml  web.yml
apps/desktop/: README.md
apps/host-agent/: package.json
apps/host-agent/src/: agent.ts
apps/host-desktop/: index.html  package.json
apps/host-desktop/src/: main.tsx  styles.css
apps/host-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/host-desktop/src-tauri/capabilities/: default.json
apps/host-desktop/src-tauri/src/: lib.rs  main.rs
apps/relay/: .env.example  package.json
apps/relay/src/: server.ts
apps/web/: .env.production  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  (+7 more)
audit/: qev-audit-report.json  qev-audit-report.md  qev-live-relay-smoke-report.json  qev-live-relay-smoke-report.md  qev-offline-smoke-report.json  qev-offline-smoke-report.md  qev-relay-ttl-smoke-report.json  qev-relay-ttl-smoke-report.md  qev-responsive-smoke-report.json  qev-responsive-smoke-report.md  qev-ui-smoke-report.json  qev-ui-smoke-report.md
docs/: architecture.md  audit-log.md  initial-issues.md  protocol.md  qev-integration.md
public/: index.html
scripts/: qev-audit.mjs  qev-live-relay-smoke.mjs  qev-offline-smoke.mjs  qev-relay-ttl-smoke.mjs  qev-responsive-smoke.mjs  qev-serve-built.mjs  qev-static-server.mjs  qev-ui-smoke.mjs
