[package]
name = "qev-host-desktop"
version = "0.1.0"
description = "QEV Host native desktop app"
authors = ["QEV Workspace"]
edition = "2021"

[lib]
name = "qev_host_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
